syntax = "proto3";

package checkout;

import "shipping-service.proto";

option java_multiple_files = true;
option java_package = "github.io.truongbn.checkout";

message CheckoutOrderRequest {
    string item_id = 1;
    int32 purchase_quantities = 2;
    string user_id = 3;
    optional shipping.Address shipping_address = 4;
}

message CheckoutOrderResponse {
    string item_id = 1;
    string user_id = 2;
    int32 purchase_quantities = 3;
    double purchase_amount = 4;
    double shipping_fee = 5;
    shipping.Address shipping_address = 6;
}

service CheckoutService {
    rpc ExecuteCheckoutOrder (CheckoutOrderRequest) returns (CheckoutOrderResponse);
}