syntax = "proto3";

package item;

option java_multiple_files = true;
option java_package = "github.io.truongbn.item";

message ItemInformationRequest {
    string item_id = 1;
}

message ItemInformation {
    string item_id = 1;
    string item_name = 2;
    double price = 3;
    optional ItemSizeInformation size = 4;
}

message ItemSizeInformation {
    double width = 1;
    double depth = 2;
    double height = 3;
}

service ItemService {
    rpc GetItemInformation (ItemInformationRequest) returns (ItemInformation);
}
